run lint & format
