# routes/index.js
@@ -1,7 +1,7 @@
 const express = require("express");
 const router = express.Router();
-const swaggerDocument = require('../swagger-output.json');
-const swaggerUi = require('swagger-ui-express');
+const swaggerDocument = require("../swagger-output.json");
+const swaggerUi = require("swagger-ui-express");
 
 const baseController = require("../controllers");
 router.get("/", baseController.greeting);
@@ -11,6 +11,5 @@ router.use("/users", require("./users"));
 
 module.exports = router;
 
-router.use('/api-docs', swaggerUi.serve);
-router.get('/api-docs', swaggerUi.setup(swaggerDocument));
-
+router.use("/api-docs", swaggerUi.serve);
+router.get("/api-docs", swaggerUi.setup(swaggerDocument));
